# ren_java_backend

./: .gitignore  README.md  justfile  log4rs.yaml  pom.xml  run.sh
nsfw_lib/: Cargo.toml  justfile  log4rs.yaml
nsfw_lib/src/: daemon.rs  lib.rs
src/main/java/com/ren_backend/ren_backend/: DBImageController.java  Greeting.java  GreetingController.java  ImageHelper.java  LogoBuilder.java  NsfwPredictor.java  RenBackendApplication.java  RequestJson.java  UploadController.java
src/main/java/com/ren_backend/ren_backend/model/: ImageEntity.java
src/main/java/com/ren_backend/ren_backend/repository/: ImageRepository.java
src/main/java/com/ren_backend/ren_backend/service/: ImageService.java
src/main/resources/: application.properties
src/test/java/com/ren_backend/ren_backend/: RenBackendApplicationTests.java
