[package]
name = "nsfw_lib"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nsfw_daemon"
path = "src/daemon.rs"

[lib]
name = "nsfw_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
shellexpand = "3.1.0"
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
nsfw  = { version = "0.1.0",  default-features = false, features = ["jpeg", "png"] }
log = "0.4.21"
log4rs = "1.3.0"
